<resources>
    <string name="app_name">webServer</string>
    <string name="btn_start">启动服务</string>
    <string name="btn_stop">停止服务</string>
    <string name="no_internet">未连接网络，请先链接网络！</string>
    <string name="has_internet">      已连接网络！      </string>
    <string name="internet_addr">请在浏览器中输入:</string>
    <string name="btn_file_start">启动文件服务</string>
    <string name="btn_file_stop">停止文件服务</string>
    <string name="webserver">webServer:</string>
    <string name="file_manager">文件管理:</string>
    <string name="ftp_server">ftp Server:</string>
    <string name="nsd_servername_postfix">FTP Server</string>
    <string name="btn_ftp_setting">设置</string>
    <string name="user_settings">用户:</string>
    <string name="default_user_name">ftp</string>
    <string name="default_port">2121</string>
    <string name="default_dir">/mnt/sdcard</string>
</resources>
