<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/darker_gray"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/webserver"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/webserver"/>
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32px"
            android:text="@string/no_internet"/>
        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:enabled="false"
            android:textSize="32px"
            android:onClick="onButtonStart"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/filemanager"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/webserver"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_manager"/>
        <TextView
            android:id="@+id/fitext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32px"
            android:text="@string/no_internet"/>
        <Button
            android:id="@+id/file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:enabled="false"
            android:textSize="32px"
            android:onClick="onFileStart"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/filemanager"
        android:layout_centerHorizontal="true"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ftp_server"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ftp_setting"
                android:onClick="onFtpSettings"/>
        </LinearLayout>

        <TextView
            android:id="@+id/ftp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32px"
            android:text="@string/no_internet"/>
        <Button
            android:id="@+id/ftp_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:enabled="false"
            android:textSize="32px"
            android:onClick="onFtpStart"/>
    </LinearLayout>
</RelativeLayout>
