<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_settings"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户名"/>
        <EditText
            android:id="@+id/user_ftp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/default_user_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密    码"/>
        <EditText
            android:id="@+id/user_password"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/default_user_name"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ANONYMOUS:"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allow anonymous login"/>
        <CheckBox
            android:id="@+id/anonymous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="高级设置："/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="端 口 号"/>
        <EditText
            android:id="@+id/ftp_prot"
            android:layout_width="100dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="@string/default_port"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设置根目录"/>
        <EditText
            android:id="@+id/ftp_dir"
            android:layout_width="200dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="@string/default_dir"/>
    </LinearLayout>
</LinearLayout>